--- a/index.html
+++ b/index.html
@@ -1153,12 +1153,20 @@
       transition: transform 0.7s ease-in-out; /* Nur die Transformation wird animiert */
       overflow: hidden; /* Verhindert internes Scrollen des Splash-Screens */
       /* Das Logo wird initial unsichtbar gemacht und blendet später ein */
+      /* Mobile First: Logo-Skalierung und -Größen standardmäßig für Mobilgeräte */
     }
 
     #splash-screen.hide {
       transform: translateY(-100%);
     }
 
+    /* Mobile First: Basis-Skalierung für das Logo im Splash Screen */
+    #splash-screen .footer-logo {
+      transform: scale(0.4);
+      text-align: center;
+      opacity: 0;
+      transition: opacity 0.6s ease-in-out;
+    }
     /* Stile für das Logo im Splash Screen, basierend auf .footer-logo */
     #splash-screen .footer-logo {
       /* Das Logo ist initial unsichtbar und wird per JS-Klasse .show eingeblendet */
@@ -1170,11 +1178,38 @@
       opacity: 0.8 !important; /* Macht das Logo sichtbar */
     }
 
-
     /* Die spezifischen Logo-Text-Stile werden von .footer-logo .bazara-style etc. geerbt */
     /* Es ist wichtig, dass die Schriftgrößen und Farben aus .footer-logo hier greifen */
     /* .footer-logo .bazara-style, .footer-logo .safia-style, .footer-logo .subtitle-style */
     /* bleiben unverändert und werden hier wiederverwendet. */
+    /* Mobile First: Schriftgrößen für Splash Screen Logo */
+    #splash-screen .footer-logo .bazara-style {
+      font-size: 180px;
+    }
+    #splash-screen .footer-logo .safia-style {
+      font-size: 190px;
+    }
+    #splash-screen .footer-logo .subtitle-style {
+      font-size: 28px;
+      margin-top: 15px;
+    }
+
+    /* Desktop-Anpassungen für den Splash Screen */
+    @media (min-width: 769px) {
+      #splash-screen .footer-logo {
+        transform: scale(1); /* Ursprüngliche Skalierung für Desktop wiederherstellen */
+      }
+      #splash-screen .footer-logo .bazara-style {
+        font-size: 270px; /* Desktop-Schriftgröße */
+      }
+      #splash-screen .footer-logo .safia-style {
+        font-size: 285px; /* Desktop-Schriftgröße */
+      }
+      #splash-screen .footer-logo .subtitle-style {
+        font-size: 42px; /* Desktop-Schriftgröße */
+        margin-top: 22.5px; /* Desktop-Abstand */
+      }
+    }
 
     /* Hamburger Menu Styles */
     .hamburger-menu {
@@ -1361,25 +1396,6 @@
       }
       .dynamic-phrase.exiting {
         transform: translateX(0) translateY(-100%); /* Nur Y-Transformation für Animation beibehalten */
-      }
-
-      /* Splash Screen Anpassungen für Mobilgeräte */
-      #splash-screen .footer-logo .bazara-style {
-        font-size: 180px; /* Deutlich kleiner als Desktop (war 270px) */
-      }
-      #splash-screen .footer-logo .safia-style {
-        font-size: 190px; /* Deutlich kleiner als Desktop (war 285px) */
-      }
-      #splash-screen .footer-logo .subtitle-style {
-        font-size: 28px; /* Deutlich kleiner als Desktop (war 42px) */
-        margin-top: 15px; /* Angepasster Abstand */
-      }
-
-      /* Sicherstellen, dass das Logo im Splash-Screen auch auf Mobilgeräten zentriert bleibt
-         und die show-Klasse die Opazität korrekt steuert. */
-      #splash-screen .footer-logo {
-        transform: scale(0.4); /* Logo deutlich stärker verkleinern (halb so groß wie vorherige 0.8 Skalierung) */
-        /* Die Opacity-Transition und .show-Klasse bleiben wie sie sind. */
       }
 
       /* Info Section Anpassungen für Mobilgeräte */
@@ -2124,30 +2140,75 @@
       const body = document.body;
       const htmlElement = document.documentElement; // HTML-Element abrufen
 
-      if (splashScreen && splashLogo) {
-        body.style.overflow = 'hidden'; // Scrollen verhindern, während Splash Screen sichtbar ist
-        htmlElement.style.overflow = 'hidden'; // Scrollen auch auf dem HTML-Element verhindern
+      // if (splashScreen && splashLogo) {
+      //   body.style.overflow = 'hidden'; // Scrollen verhindern, während Splash Screen sichtbar ist
+      //   htmlElement.style.overflow = 'hidden'; // Scrollen auch auf dem HTML-Element verhindern
         
-        // Schritt 1: Nach einer kurzen Verzögerung das Logo einblenden
-        setTimeout(() => {
-          splashLogo.classList.add('show');
-        }, 200); // Logo beginnt nach 0.2 Sekunden zu erscheinen
+      //   // Schritt 1: Nach einer kurzen Verzögerung das Logo einblenden
+      //   setTimeout(() => {
+      //     splashLogo.classList.add('show');
+      //   }, 200); // Logo beginnt nach 0.2 Sekunden zu erscheinen
 
-        // Schritt 2: Nachdem das Logo erschienen ist und kurz sichtbar war, den gesamten Splash Screen ausblenden
-        setTimeout(() => { // Neuer Wert: 0.2s (Logo Start) + 0.6s (Logo Fade-In) + 0.9s (Anzeigezeit) = 1.7s
-          if (splashScreen) { // Erneute Prüfung, falls splashScreen zwischenzeitlich entfernt wurde
-            splashScreen.classList.add('hide');
+      //   // Schritt 2: Nachdem das Logo erschienen ist und kurz sichtbar war, den gesamten Splash Screen ausblenden
+      //   setTimeout(() => { // Neuer Wert: 0.2s (Logo Start) + 0.6s (Logo Fade-In) + 0.9s (Anzeigezeit) = 1.7s
+      //     if (splashScreen) { // Erneute Prüfung, falls splashScreen zwischenzeitlich entfernt wurde
+      //       splashScreen.classList.add('hide');
             
-            splashScreen.addEventListener('transitionend', function handleTransitionEnd(event) {
-              if (event.propertyName === 'transform' && splashScreen) {
-                splashScreen.style.display = 'none';
-                body.style.overflow = '';
-                htmlElement.style.overflow = ''; // Overflow für HTML-Element zurücksetzen
-                splashScreen.removeEventListener('transitionend', handleTransitionEnd);
-              }
-            });
-          }
-        }, 1700); // Splash Screen beginnt nach 1.7s zu verschwinden
+      //       splashScreen.addEventListener('transitionend', function handleTransitionEnd(event) {
+      //         if (event.propertyName === 'transform' && splashScreen) {
+      //           splashScreen.style.display = 'none';
+      //           body.style.overflow = '';
+      //           htmlElement.style.overflow = ''; // Overflow für HTML-Element zurücksetzen
+      //           splashScreen.removeEventListener('transitionend', handleTransitionEnd);
+      //         }
+      //       });
+      //     }
+      //   }, 1700); // Splash Screen beginnt nach 1.7s zu verschwinden
+      // }
+
+      if (splashScreen && splashLogo) {
+        body.style.overflow = 'hidden';
+        htmlElement.style.overflow = 'hidden';
+
+        const logoFadeInDuration = 600; // Muss mit der CSS transition-duration für opacity übereinstimmen
+        const logoVisibleTime = 900;    // Zeit, die das Logo sichtbar bleibt, nachdem es eingeblendet wurde
+
+        const completeSplashScreenSequence = () => {
+          if (splashLogo) splashLogo.classList.add('show');
+          setTimeout(() => {
+            if (splashScreen) {
+              splashScreen.classList.add('hide');
+              splashScreen.addEventListener('transitionend', function handleTransitionEnd(event) {
+                if (event.propertyName === 'transform' && splashScreen) {
+                  splashScreen.style.display = 'none';
+                  body.style.overflow = '';
+                  htmlElement.style.overflow = '';
+                  splashScreen.removeEventListener('transitionend', handleTransitionEnd);
+                }
+              });
+            }
+          }, logoFadeInDuration + logoVisibleTime);
+        };
+
+        document.fonts.ready.then(completeSplashScreenSequence).catch(error => {
+          console.warn('Schriftarten konnten nicht geladen werden oder Zeitüberschreitung:', error);
+          // Fallback: Sequenz trotzdem starten, ähnlich dem ursprünglichen Verhalten
+          // Hier könnten Sie die ursprünglichen Timeouts verwenden oder leicht anpassen
+          setTimeout(() => { if (splashLogo) splashLogo.classList.add('show'); }, 200);
+          setTimeout(() => {
+            if (splashScreen) {
+              splashScreen.classList.add('hide');
+              splashScreen.addEventListener('transitionend', function handleTransitionEnd(event) {
+                if (event.propertyName === 'transform' && splashScreen) {
+                  splashScreen.style.display = 'none';
+                  body.style.overflow = '';
+                  htmlElement.style.overflow = '';
+                  splashScreen.removeEventListener('transitionend', handleTransitionEnd);
+                }
+              });
+            }
+          }, 1700); // Ursprüngliche Gesamtzeit
+        });
       }
 
       // Bestehendes Skript für die Navigation
