--- a/faq.html
+++ b/faq.html
@@ -1049,14 +1049,14 @@
       /* Footer Anpassungen für Mobilgeräte */
       .main-footer {
         height: auto !important; /* Höhe automatisch anpassen */
-        padding: 100px 20px 20px 20px !important; /* Oberes Padding erhöht für mehr "Lücke oben", unten 20px */
+        padding: 780px 20px 20px 20px !important; /* Oberes Padding erhöht für mehr "Lücke oben", unten 20px */
         flex-direction: column !important; /* Elemente untereinander anordnen */
         text-align: left !important; /* Standard-Textausrichtung für den Footer-Inhalt auf links geändert */
       }
 
       .footer-top-left-content {
         position: static !important; /* Positionierung aufheben */
-        margin-top: -90px !important; /* Titel und Button um 40px nach oben verschieben */
+        margin-top: -350px !important; /* Titel und Button um 40px nach oben verschieben */
         margin-bottom: 80px !important; /* Abstand zum nächsten Element */
         text-align: left !important; /* Inhalt linksbündig */
       }
@@ -1065,6 +1065,7 @@
         font-size: 48px !important; /* Deutlich kleinere Schriftgröße */
         line-height: 1.2 !important;
         margin-bottom: 70px !important; /* Weiter vergrößerter Abstand zum Button */
+        margin-top: -420px !important;
         /* Animation bleibt, aber Startposition und Sichtbarkeit werden beibehalten */
         transform: translateY(50px) !important; /* Kleinere Startverschiebung */
       }
@@ -1125,7 +1126,8 @@
         align-items: flex-start; /* Spalten linksbündig ausrichten */
         width: 100%;
         font-size: 14px !important; /* Etwas größere Basisschrift für Lesbarkeit */
-        margin-bottom: 30px !important; /* Abstand zum nächsten Block */
+        margin-bottom: 150px !important; /* Abstand zum nächsten Block */
+        margin-left: -90px !important;
       }
 
       .footer-contact-column,
