--- a/kontakt.html
+++ b/kontakt.html
@@ -1410,7 +1410,7 @@
       }
       .neue-faq-sektion .main-heading {
         font-size: 42px; 
-        margin-bottom: 40px; /* Angepasster Abstand zum Inhalt */
+        margin-bottom: -60px; /* Reduzierter Abstand zum Inhalt für Mobilgeräte */
       }
 
       .neue-faq-sektion .kontakt-layout-container {
