--- a/kontakt.html
+++ b/kontakt.html
@@ -1444,6 +1444,45 @@
       .neue-faq-sektion .kontakt-info-rechts p {
         justify-content: center; /* Zentriert Label und Wert innerhalb des p-Tags */
       }
+
+      /* Sprechzeiten Section Anpassungen für Mobilgeräte (von index.html übernommen) */
+      .sprechzeiten-section {
+        padding: 0 20px 40px 20px; /* Weniger Padding, besonders oben und unten */
+      }
+
+      .sprechzeiten-section .section-divider {
+        margin-bottom: 40px; /* Weniger Abstand nach unten */
+      }
+
+      .sprechzeiten-section .sub-heading {
+        font-size: 18px; /* Konsistente kleinere Schriftgröße */
+      }
+
+      .sprechzeiten-section .main-heading {
+        font-size: 42px; /* Deutlich kleinere Schriftgröße */
+        margin-bottom: 30px; /* Weniger Abstand zur Tabelle */
+      }
+
+      .sprechzeiten-tabelle {
+        width: 100%; /* Tabelle nimmt volle verfügbare Breite ein */
+        font-size: 14px; /* Kleinere Schriftgröße für Tabelleninhalt */
+        margin-top: 30px; /* Weniger Abstand nach oben */
+      }
+
+      .sprechzeiten-tabelle th,
+      .sprechzeiten-tabelle td {
+        padding: 12px 8px; /* Weniger Padding in den Zellen */
+      }
+
+      .sprechzeiten-tabelle.start-animation thead th:not(:first-child)::before {
+        height: 350px; /* Angepasste Höhe für mobile Ansicht, wie in index.html */
+      }
+
+      .sprechzeiten-hinweis {
+        font-size: 13px; /* Etwas kleinere Schrift */
+        margin-top: 30px; /* Weniger Abstand nach oben */
+        margin-bottom: 20px; /* Weniger Abstand nach unten */
+      }
     }
 
   </style>
