--- a/kontakt.html
+++ b/kontakt.html
@@ -624,7 +624,7 @@
       position: absolute;
       bottom: 320px; /* Positioniert die Linie am unteren Rand der tr */
       left: 0;
-      width: 100%;
+      width: calc(100% - 10px); /* Linie rechts um 20px gekürzt */
       height: 0.5px; /* Höhe auf 1px für bessere Sichtbarkeit/Robustheit */
       background-color: #6e370e;
       clip-path: inset(0 100% 0 0); /* Initial von rechts komplett verdeckt */
