--- a/kontakt.html
+++ b/kontakt.html
@@ -622,7 +622,7 @@
     .sprechzeiten-tabelle thead tr::after {
       content: '';
       position: absolute;
-      bottom: 320px; /* Positioniert die Linie am unteren Rand der tr */
+      bottom: 320px; /* Desktop: Positioniert die Linie relativ weiter oben */
       left: 0;
       width: calc(100% - 10px); /* Linie rechts um 20px gekürzt */
       height: 0.5px; /* Höhe auf 1px für bessere Sichtbarkeit/Robustheit */
@@ -1467,6 +1467,12 @@
         width: 100%; /* Tabelle nimmt volle verfügbare Breite ein */
         font-size: 14px; /* Kleinere Schriftgröße für Tabelleninhalt */
         margin-top: 30px; /* Weniger Abstand nach oben */
+      }
+
+      /* Linie unter Kopfzeile für Mobile anpassen */
+      .sprechzeiten-tabelle thead tr::after {
+        bottom: 0; /* Mobile: Linie am unteren Rand der Kopfzeile */
+        width: 100%; /* Mobile: Linie über die volle Breite */
       }
 
       .sprechzeiten-tabelle th,
